8 fix test